[SYNC UP] - Sync up with o2o-php in register and authentication
