# accounts/account.model.js
@@ -2,11 +2,25 @@ const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
 const schema = new Schema({
+    username: { type: String, unique: true, required: true },
     email: { type: String, unique: true, required: true },
     passwordHash: { type: String, required: true },
     title: { type: String, required: true },
     firstName: { type: String, required: true },
     lastName: { type: String, required: true },
+    avatar: { type: String },
+    cover: { type: String },
+    userId: { type: String },
+    userPassword: { type: String },
+    background_image: { type: String },
+    address: { type: String },
+    working: { type: String },
+    working_link: { type: String },
+    about: { type: String },
+    school: { type: String },
+    gender: { type: String },
+    birthday: { type: String },
+    language: { type: String },
     acceptTerms: Boolean,
     role: { type: String, required: true },
     verificationToken: String,
@@ -16,7 +30,7 @@ const schema = new Schema({
         expires: Date
     },
     passwordReset: Date,
-    created: { type: Date, default: Date.now },
+    createdAt: { type: Date, default: Date.now },
     updated: Date
 });
 
@@ -31,6 +45,8 @@ schema.set('toJSON', {
         // remove these props when object is serialized
         delete ret._id;
         delete ret.passwordHash;
+        delete ret.userId;
+        delete ret.userPassword;
     }
 });
 
